Add additional requirements

--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -6,5 +6,7 @@ opentelemetry-sdk==1.31.1
 aiohttp==3.12.7
 azure-ai-evaluation==1.8.0
 azure-ai-ml==1.27.1
+azure-storage-blob==12.19.0
+azure-mgmt-machinelearningservices==2.0.0
 dataverse-api==1.2.2
 promptflow-azure==1.18.1
